# AnalyserGPT

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  streamlit-ui.py
agents/: code_executor_agent.py  data_analyzer_agent.py
agents/prompts/: data_analyzer_prompt.py
config/: constants.py  docker_util.py
models/: model_client.py
teams/: analyzer_team.py
temp/: causes_of_religious_orthodoxy.csv  summary.md  tmp_code_5882446fde96d50f85c1af7413a2acd9aa652829376f5505c43a042c69cfcaa5.python  tmp_code_837bc951069a8eebac44378ae944353e8ef72afed3328f631982b80791850c3f.python  tmp_code_a8276d518c99dc9984ebd40d8b513d45b4f2556bf2f541b75182224f6634ad82.sh  tmp_code_cb332b4ac729be53061743f6d1c09cf3bf9a0acfdfba3ec1be8739a80e69541f.python  tmp_code_ed29a0dd3c90bfd489eb8d3326d9370e0d2eb9d554c3167de762019e309763b5.python  tmp_code_fed382e6de5487b67658bc9157e4dd3695eb8f7338cd306026252514c9abb8ab.python
