[project]
name = "analysergpt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen-agentchat>=0.7.5",
    "autogen-core>=0.7.5",
    "autogen-ext[anthropic,docker,ollama,openai]>=0.7.5",
    "autogenstudio>=0.1.5",
    "docker>=7.1.0",
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "streamlit>=1.50.0",
    "uvicorn[standard]>=0.38.0",
]
